--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,2 +1,3 @@
 <!-- your html code here -->
-<p>Hello, I'm the navbar.html</p>
+<h1><p>Hello, I'm the navbar.html</p></h1>
+<a class="btn btn-primary" href="/index.html">Home</a>
