--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,13 @@
-<!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="row container bg-light" style="height: 400px;">
+    <div class="col-3 mt-5">
+        <img src="/website/assets/img/2.jpg" alt="" class="img-thumbnail rounded float-left rounded-circle">
+    </div>
+
+    <div class="col-9 mt-5">
+        <h2>The second Heading is Pretty Cool Too</h2>
+        <p class="fs-5 bg-light">
+            Donec ullamcorper nulla nom metus auctor fringilia. Vestibulum is ligula porta felis esismos semper, Praesent commodo cursus magna, ve scelerensqui nisl consecuetur.
+            Fusce dapibus, tellus ac cursus commodo
+        </p>
+    </div>
+</div>
