--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-black">
+<nav class="row navbar navbar-expand-lg navbar-light bg-black">
 
   <a class="col-2 navbar-brand text-secondary fs-4 mx-2" href="../index.html">Star BootStrat</a>
 
