--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,13 +1,13 @@
-<div class="row container bg-light" style="height: 400px;">
-    <div class="col-3 mt-5">
-        <img src="/website/assets/img/2.jpg" alt="" class="img-thumbnail rounded float-left rounded-circle">
-    </div>
-
-    <div class="col-9 mt-5">
-        <h2>The second Heading is Pretty Cool Too</h2>
-        <p class="fs-5 bg-light">
+<div class="row media services">
+    <div class="col-2 media-body px-5 pt-5 pb-5 bg-light">
+        <img class="img-thumbnail rounded float-left rounded-circle" src="/website/assets/img/2.jpg" alt="">
+    </div> 
+    
+    <div class="col-10 media-body bg-light pt-5 pb-5 ">
+        <h2 class="m-0">The second Heading is Pretty Cool Too</h2>
+        <p class="m-0">
             Donec ullamcorper nulla nom metus auctor fringilia. Vestibulum is ligula porta felis esismos semper, Praesent commodo cursus magna, ve scelerensqui nisl consecuetur.
             Fusce dapibus, tellus ac cursus commodo
         </p>
-    </div>
+    </div> 
 </div>
