--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,10 +1,12 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
 
-<div class="col-12">
-    <div class="p-5 bg-light tagline grid-block">
-        <h1 class="fs-1 bg-light fw-bold">One page Wonder</h1>
-        <p class="fs-2 bg-light">Will Knock Your Socks Off</p>
+<div class="row">
+    <div class="col-12 tagline">
+        <div class="p-5 grid-block">
+            <h1 class="fs-1 bg-light fw-bold">One page Wonder</h1>
+            <p class="fs-2 bg-light">Will Knock Your Socks Off</p>
+        </div>
     </div>
 </div>
 
