--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,13 @@
-<!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<div class="row media services">
+    <div class="col-10 media-body bg-light pt-5 pb-5 px-5">
+        <h2>The second Heading is Pretty Cool Too</h2>
+        <p>
+            Donec ullamcorper nulla nom metus auctor fringilia. Vestibulum is ligula porta felis esismos semper, Praesent commodo cursus magna, ve scelerensqui nisl consecuetur.
+            Fusce dapibus, tellus ac cursus commodo
+        </p>
+    </div> 
+
+    <div class="col-2 media-body p-5 bg-light">
+        <img class="img-thumbnail rounded float-left rounded-circle" src="/website/assets/img/1.jpg" alt="">
+    </div> 
+</div>
