--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,44 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="row media services">
+    <div class="col-12 p-5 bg-light">
+
+        <div class="p-5"><hr></div>
+
+        <div class="px-5 m-0 bg-light">
+            <h1 >Contact</h1>
+            <p>Donec ullamcorper nulla nom metus auctor fringilla. Vesstibulum id liguila porta felis euismod semper. Praesent commodo cursos marna, vel scelerisque nisl consertetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+
+
+        <div class="row">
+            <div class="col-2"><p></p></div>
+
+            <div class="col-8">
+                <div>
+                    <form action="#" class="border p-3 form rounded">
+                        <div class="form-group row py-1">
+                            <label for="inputEmail3" class="col-sm-2 col-form-label"><strong>Your E-mail</strong></label>
+                            <div class="col-sm-10">
+                                <input type="email" class="form-control" id="inputEmail3" placeholder="Your E-mail">
+                            </div>
+                        </div>
+
+                        <div class="form-group row py-1">
+                            <label for="inputEmail3" class="col-sm-2 col-form-label"><strong>Your message</strong></label>
+                            <div class="col-sm-10">
+                                <textarea class="form-control" id="inputEmail3" rows="3" placeholder="Please enter your message here..."></textarea>
+                            </div>
+                        </div>
+                        
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="col-2"><p></p></div>
+        </div>
+
+
+
+
+    </div> 
+</div>
