--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -7,6 +7,13 @@ p{
     font-size: medium;
 }
 
+form{
+    background-color: rgb(233, 228, 228);
+    align-items: flex-end;
+    text-align: right;
+}
+
+
 .tagline{
     background-image: url('../img/bg.jpg');
     
@@ -42,4 +49,9 @@ p{
     color: blue;
     margin-bottom: 0px;
     padding-bottom: 0px;
+}
+
+.derecha{
+    float : right;
+    
 }
