algunas correciones de padding

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,9 +1,9 @@
 <div class="row media services">
     <div class="col-12 p-5 bg-light">
 
-        <div class="p-5"><hr></div>
+        <div><hr></div>
 
-        <div class="px-5 m-0 bg-light">
+        <div class="m-0 bg-light">
             <h1 >Contact</h1>
             <p>Donec ullamcorper nulla nom metus auctor fringilla. Vesstibulum id liguila porta felis euismod semper. Praesent commodo cursos marna, vel scelerisque nisl consertetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
