--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,51 +1,51 @@
-<div class="row porfolio">
-
-    <div class="col-12 bg-light px-5">
+<div class="row porfolio px-5 bg-light">
+    <div class="col">
         <div><hr></div>
-
-        <div class="m-0 bg-light">
-            <h1 >Porfolio</h1>
-            <p>Donec ullamcorper nulla nom metus auctor fringilla. Vesstibulum id liguila porta felis euismod semper. Praesent commodo cursos marna, vel scelerisque nisl consertetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+</div>
+<div class="row porfolio px-5 bg-light">
+    <div class="col m-0 bg-light">
+        <h1 >Porfolio</h1>
+        <p>Donec ullamcorper nulla nom metus auctor fringilla. Vesstibulum id liguila porta felis euismod semper. Praesent commodo cursos marna, vel scelerisque nisl consertetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+</div>
+<div class="row porfolio px-5 d-flex justify-content-between bg-light">
+    <div class="col-4">
+        <div class="card">
+            <img class="card-img-top bg-secondary" data-src="/website/assets/img/gris.svg" alt="Card image cap">
+            <div class="card-body">
+                <h3>Project Name</h3>
+            </div>
+            <div class="card-body pt-0 mt-0">
+                <p class="card-text small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+            </div>
         </div>
-        <div class="album m-0 bg-light">
-            <div class="container m-0">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-md-4 tarjeta">
-                        <div class="card mb-4 tarjeta">
-                            <img class="card-img-top bg-secondary" data-src="/website/assets/img/gris.svg" alt="Card image cap">
-                            <div class="card-body">
-                                <h3>Project Name</h3>
-                            </div>
-                            <div class="card-body pt-0 mt-0">
-                                <p class="card-text small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
-                            </div>
-                        </div>
-                    </div>
+    </div>
 
-                    <div class="col-md-4 tarjeta">
-                        <div class="card mb-4 tarjeta">
-                            <img class="card-img-top bg-secondary" data-src="..." alt="Card image cap">
-                            <div class="card-body">
-                                <h3>Project Name</h3>
-                            </div>
-                            <div class="card-body pt-0 mt-0">
-                                <p class="card-text small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
-                            </div>
-                        </div>
-                    </div>
-                
-                    <div class="col-md-4 tarjeta">
-                        <div class="card mb-4 tarjeta">
-                            <img class="card-img-top bg-secondary" data-src="..." alt="Card image cap">
-                            <div class="card-body">
-                                <h3>Project Name</h3>
-                            </div>
-                            <div class="card-body pt-0 mt-0">
-                                <p class="card-text small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+
+    <div class="col-4">
+        <div class="card">
+            <img class="card-img-top bg-secondary" data-src="/website/assets/img/gris.svg" alt="Card image cap">
+            <div class="card-body">
+                <h3>Project Name</h3>
+            </div>
+            <div class="card-body pt-0 mt-0">
+                <p class="card-text small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="col-4">
+        <div class="card">
+            <img class="card-img-top bg-secondary" data-src="/website/assets/img/gris.svg" alt="Card image cap">
+            <div class="card-body">
+                <h3>Project Name</h3>
+            </div>
+            <div class="card-body pt-0 mt-0">
+                <p class="card-text small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
             </div>
         </div>
     </div>
