--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,5 +1,5 @@
-<div class="row media services">
-    <div class="col-10 media-body bg-light pt-5 pb-5 px-5">
+<div class="row media services p-5 bg-light">
+    <div class="col-10 media-body pr-5">
         <h2>The second Heading is Pretty Cool Too</h2>
         <p>
             Donec ullamcorper nulla nom metus auctor fringilia. Vestibulum is ligula porta felis esismos semper, Praesent commodo cursus magna, ve scelerensqui nisl consecuetur.
@@ -7,7 +7,7 @@
         </p>
     </div> 
 
-    <div class="col-2 media-body p-5 bg-light">
+    <div class="col-2 media-body pl-5">
         <img class="img-thumbnail rounded float-left rounded-circle" src="/website/assets/img/1.jpg" alt="">
     </div> 
-</div>
+</div> 
