--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,13 +1,18 @@
-<div class="row media services">
-    <div class="col-2 media-body p-5 bg-light">
-        <img class="img-thumbnail rounded float-left rounded-circle" src="/website/assets/img/2.jpg" alt="">
-    </div> 
+    <div class="row px-5 bg-light">
+        <div class="col">
+            <div><hr></div>
+        </div>
+    </div>
+    <div class="row media services p-5 bg-light">
+        <div class="col-2 media-body pl-5">
+            <img class="img-thumbnail rounded float-left rounded-circle" src="/website/assets/img/2.jpg" alt="">
+        </div> 
  
-    <div class="col-10 media-body bg-light pt-5 pb-5 px-5">
-        <h2>The second Heading is Pretty Cool Too</h2>
-        <p>
-            Donec ullamcorper nulla nom metus auctor fringilia. Vestibulum is ligula porta felis esismos semper, Praesent commodo cursus magna, ve scelerensqui nisl consecuetur.
-            Fusce dapibus, tellus ac cursus commodo
-        </p>
+        <div class="col-10 media-body pr-5">
+            <h2>The second Heading is Pretty Cool Too</h2>
+            <p>
+                Donec ullamcorper nulla nom metus auctor fringilia. Vestibulum is ligula porta felis esismos semper, Praesent commodo cursus magna, ve scelerensqui nisl consecuetur.
+                Fusce dapibus, tellus ac cursus commodo
+            </p>
+        </div> 
     </div> 
-</div>
