espero que finalizado

--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,9 +1,9 @@
 <div class="row media services">
-    <div class="col-2 media-body p-5 bg-light">
+    <div class="col-6 col-sm-6 col-md-4	col-lg-4 col-xl-3 img-fluid foto px-5 m-0 bg-light">
         <img class="img-thumbnail rounded float-left rounded-circle" src="/website/assets/img/2.jpg" alt="">
     </div> 
     
-    <div class="col-10 media-body bg-light pt-5 pb-5 px-5">
+    <div class="col-6 col-sm-6 col-md-8	col-lg-8 col-xl-9 px-5 m-0 bg-light">
         <h2>The second Heading is Pretty Cool Too</h2>
         <p>
             Donec ullamcorper nulla nom metus auctor fringilia. Vestibulum is ligula porta felis esismos semper, Praesent commodo cursus magna, ve scelerensqui nisl consecuetur.
