--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -12,7 +12,7 @@
                 <div class="row d-flex justify-content-around">
                     <div class="col-md-4 tarjeta">
                         <div class="card mb-4 tarjeta">
-                            <img class="card-img-top bg-secondary" data-src="..." alt="Card image cap">
+                            <img class="card-img-top bg-secondary" data-src="./assets/img/breathe-code-logo-white.png" alt="">
                             <div class="card-body">
                                 <h3>Project Name</h3>
                             </div>
@@ -24,7 +24,7 @@
 
                     <div class="col-md-4 tarjeta">
                         <div class="card mb-4 tarjeta">
-                            <img class="card-img-top bg-secondary" data-src="..." alt="Card image cap">
+                            <img class="card-img-top bg-secondary" data-src="./assets/img/breathe-code-logo-white.png" alt="">
                             <div class="card-body">
                                 <h3>Project Name</h3>
                             </div>
@@ -36,7 +36,7 @@
                 
                     <div class="col-md-4 tarjeta">
                         <div class="card mb-4 tarjeta">
-                            <img class="card-img-top bg-secondary" data-src="..." alt="Card image cap">
+                            <img class="card-img-top bg-secondary" data-src="./assets/img/breathe-code-logo-white.png" alt="">
                             <div class="card-body">
                                 <h3>Project Name</h3>
                             </div>
