me quedo en porfolio y lo del menú

--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,16 +1,16 @@
-<div class="row porfolio px-5 bg-light">
+<div class="row px-5 bg-light">
     <div class="col">
         <div><hr></div>
     </div>
 </div>
-<div class="row porfolio px-5 bg-light">
+<div class="row px-5 bg-light">
     <div class="col m-0 bg-light">
         <h1 >Porfolio</h1>
         <p>Donec ullamcorper nulla nom metus auctor fringilla. Vesstibulum id liguila porta felis euismod semper. Praesent commodo cursos marna, vel scelerisque nisl consertetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
 </div>
 <div class="row porfolio px-5 d-flex justify-content-between bg-light">
-    <div class="col-4">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
         <div class="card">
             <img class="card-img-top bg-secondary" data-src="/website/assets/img/gris.svg" alt="Card image cap">
             <div class="card-body">
@@ -23,8 +23,7 @@
     </div>
 
 
-
-    <div class="col-4">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 px-5">
         <div class="card">
             <img class="card-img-top bg-secondary" data-src="/website/assets/img/gris.svg" alt="Card image cap">
             <div class="card-body">
@@ -37,8 +36,7 @@
     </div>
 
 
-
-    <div class="col-4">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 px-5">
         <div class="card">
             <img class="card-img-top bg-secondary" data-src="/website/assets/img/gris.svg" alt="Card image cap">
             <div class="card-body">
