--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -3,12 +3,12 @@
             <div><hr></div>
         </div>
     </div>
-    <div class="row media services p-5 bg-light">
-        <div class="col-2 media-body pl-5">
+    <div class="row p-5 bg-light">
+        <div class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-3 pl-5">
             <img class="img-thumbnail rounded float-left rounded-circle" src="/website/assets/img/2.jpg" alt="">
         </div> 
  
-        <div class="col-10 media-body pr-5">
+        <div class="col-6 col-sm-7 col-md-8 col-lg-9 col-xl-9 pr-5">
             <h2>The second Heading is Pretty Cool Too</h2>
             <p>
                 Donec ullamcorper nulla nom metus auctor fringilia. Vestibulum is ligula porta felis esismos semper, Praesent commodo cursus magna, ve scelerensqui nisl consecuetur.
