--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -4,10 +4,8 @@
 <div class="row">
     <div class="col-12 tagline">
         <div class="p-5 grid-block">
-            <h1 class="fs-1 bg-light fw-bold">One page Wonder</h1>
-            <p class="fs-2 bg-light">Will Knock Your Socks Off</p>
+            <p class="bg-light cabecera1">One page Wonder</p>
+            <p class="bg-light cabecera2">Will Knock Your Socks Off</p>
         </div>
     </div>
 </div>
-
-<!-- div class="grid-block" style="background-image: url('/assets/img/fondo-cabecera.jpg'); width: 100%; height: 100vh; "></div -->
