--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -23,7 +23,7 @@
     </div>
 
 
-    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 px-5">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
         <div class="card">
             <img class="card-img-top bg-secondary" data-src="/website/assets/img/gris.svg" alt="Card image cap">
             <div class="card-body">
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 px-5">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
         <div class="card">
             <img class="card-img-top bg-secondary" data-src="/website/assets/img/gris.svg" alt="Card image cap">
             <div class="card-body">
